@@ -356,7 +356,7 @@ class CHttpRequest extends CApplicationComponent
 			if(($pos=strpos($pathInfo,'?'))!==false)
 			   $pathInfo=substr($pathInfo,0,$pos);
 
-			$pathInfo=urldecode($pathInfo);
+			$pathInfo=$this->urldecode($pathInfo);
 
 			$scriptUrl=$this->getScriptUrl();
 			$baseUrl=$this->getBaseUrl();
@@ -372,6 +372,38 @@ class CHttpRequest extends CApplicationComponent
 			$this->_pathInfo=trim($pathInfo,'/');
 		}
 		return $this->_pathInfo;
+	}
+
+	/**
+	 * Improved variant of urldecode.
+	 * Properly decodes both UTF-8 and ISO-8859-1 encoded URIs.
+	 *
+	 * @param string $str encoded string
+	 * @return string decoded string
+	 */
+	private function urldecode($str)
+	{
+		$str = urldecode($str);
+
+		// is it UTF-8?
+		// http://w3.org/International/questions/qa-forms-utf-8.html
+		if(preg_match('%^(?:
+		   [\x09\x0A\x0D\x20-\x7E]            # ASCII
+		 | [\xC2-\xDF][\x80-\xBF]             # non-overlong 2-byte
+		 | \xE0[\xA0-\xBF][\x80-\xBF]         # excluding overlongs
+		 | [\xE1-\xEC\xEE\xEF][\x80-\xBF]{2}  # straight 3-byte
+		 | \xED[\x80-\x9F][\x80-\xBF]         # excluding surrogates
+		 | \xF0[\x90-\xBF][\x80-\xBF]{2}      # planes 1-3
+		 | [\xF1-\xF3][\x80-\xBF]{3}          # planes 4-15
+		 | \xF4[\x80-\x8F][\x80-\xBF]{2}      # plane 16
+		)*$%xs', $str))
+		{
+			return $str;
+		}
+		else
+		{
+			return utf8_encode($str);
+		}
 	}
 
 	/**
